Addade en ny acitivity onClicknånting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SystemBolagetAppen</string>
+    <string name="title_activity_alcohol">AlcoholActivity</string>
 </resources>
